# genai-blueprint

./: .gitignore  Agents.md  IDEAS.md  Makefile  README.md  pyproject.toml  sidetest.py  tk_makefile.mk
.playwright-mcp/: page-2026-03-31T14-49-12-598Z.yml  page-2026-03-31T21-31-47-486Z.yml
config/: app_conf.yaml  baseline.yaml  mcp_servers.yaml  overrides.yaml
config/agents/: deepagents.yaml  deerflow.yaml  langchain.yaml  smolagents.yaml
config/components/: gpt_researcher.yaml
config/demos/: cli_examples.yaml
config/providers/: embeddings.yaml  llm.yaml  llm.yaml.backup  providers.yaml
docs/: CLI_Migration_Guide.md  Deer_Flow_Integration.md  Dependency_Management.md  config_thread_data_refactoring.md  deep_agent_cli_examples.md  deer_flow_runtime_context_solution.md  deer_flow_streamlit_update.md  streamlit_thread_data_implementation.md
examples/: test_streamlit_thread_data_middleware.py
genai_blueprint/__deer_flow_OLD/: __init__.py  agent.py  cli_commands.py  config_bridge.py
genai_blueprint/ai_chains/: B_1_naive_rag_example.py  B_2_self_query.py  C_1_tools_example.py  C_2_Agentic_Rag_Functional.py  C_2_advanced_rag_langgraph.py  C_2_advanced_rag_langgraph_functional.py  C_3_essay_writer_agent.py  C_4_agent_structured_output.py  fabric_chain.py
genai_blueprint/deer_flow/: __init__.py  agent.py  cli_commands.py  config_bridge.py
genai_blueprint/demos/deep_agents/: coding_agent_example.py  research_agent_example.py
genai_blueprint/demos/ekg/: CHANGES_SUMMARY.md  IDEAS.md  IS_A_RELATIONSHIPS.md  example_new_subgraph.py  graph_backend.py  graph_core.py  graph_merge.py  graph_schema.py  kuzu_graph_html.py  rainbow_subgraph.py  schema_doc_generator.py  schema_markdown_generator.py  subgraph.py  suppress_warnings.py  test_baml_extract.py  test_graph.py  text2cypher.py
genai_blueprint/demos/ekg/_old/struct_rag/: struct_rag_tool_factory.py
genai_blueprint/demos/ekg/baml_src/: architecture_doc.baml  rainbow_project_kg.baml  text2cypher.baml  top_entities.baml
genai_blueprint/demos/ekg/cli_commands/: commands.py  commands_baml.py  commands_ekg.py
genai_blueprint/demos/ekg/notebooks/: 0_scratchpad_ekg2.ipynb  0_struct_rag.ipynb
genai_blueprint/demos/maintenance_agent/: dummy_data.py  tools.py
genai_blueprint/demos/mon_master_search/: loader.py  search.py
genai_blueprint/demos/todo/: 20_▫️_CrewAI_demo.py
genai_blueprint/main/: fastapi_app.py  streamlit.py
genai_blueprint/utils/streamlit/: __init__.py  auto_scroll.py  capturing_callback_handler.py  thread_issue_fix.py
genai_blueprint/webapp/: cli_commands.py
genai_blueprint/webapp/middlewares/: __init__.py  streamlit_thread_data.py
genai_blueprint/webapp/pages/demos/: anonymization.py  codeAct_agent.py  cognee_KG.py  deep_agent.py  deep_search_agent.py  deer_flow_agent.py  graph_RAG.py  maintenance_agent.py  mon_master.py  reAct_agent.py
genai_blueprint/webapp/pages/settings/: configuration.py
genai_blueprint/webapp/pages/training/: CLI_runner.py  embeddings.py  runnable_playground.py
genai_blueprint/webapp/pages/unmaintained/: 20_browser_control.py  3_▫️_Stock_Price.py  9_▫️_SmollAgent.py
genai_blueprint/webapp/ui_components/: agent_layout.py  cypher_graph_display.py  llm_selector.py  message_renderer.py  smolagents_streamlit.py  streamlit_chat.py  trace_middleware.py
genai_blueprint/wip/: carbon.ipynb  coder_agents.py  smolagent_browser.py  smolagents_azure.py  smolagents_chain.py
notebooks/: 0_scratchpad.ipynb  A_1_langchain_runnables.ipynb  A_2_embedings.ipynb  A_3_vector_store.ipynb  A_4_llm_joke.ipynb  B_1_structured_output.ipynb  B_2_image_text.ipynb  B_3_self_query.ipynb  B_4_RAG_Structured_output.ipynb  B_5_graph_rag_kuzu.ipynb  C_10_human_in_the_loop.ipynb  C_11_custom_kg_with_cognee.ipynb  C_1_function_call.ipynb  C_2_langggraph.ipynb  C_3_tool_calling.ipynb  C_4_react_agent.ipynb  C_51_langgraph_react.ipynb  C_7_smolagents_examples.ipynb  C_8_mcp.ipynb  D_2_finetuning.ipynb  D_3_anonymization.ipynb
notebooks/unmaintained/: B_6_mistral_ocr.ipynb  C_6_crewai_customer_support.ipynb  C_9_autogen_travel_planning.ipynb  D_1_giskard.ipynb
tests/unit_tests/: test_search_agent.py
