[project]
name = "genai_bp"
version = "0.1.2"
description = "GenAI Blueprint - Application framework built on genai_tk"
authors = [{ name = "Thierry Caminel", email = "thierry.caminel@atos.net" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    # ============================================
    # Core AI Toolkit
    # ============================================
    "genai_tk @ git+https://github.com/tclatos/genai-tk@main", # GenAI Toolkit - core AI framework and components

    # ============================================
    # Core Infrastructure
    # ============================================
    "pydantic>=2.7.0,<3",       # Data validation and settings management
    "loguru>=0.7.3",            # Structured logging with better UX
    "typer>=0.13.0",            # CLI framework with type hints
    "omegaconf>=2.3.0",         # Hierarchical configuration system
    "rich[jupyter]>=13.9.4",    # Rich terminal formatting and progress bars
    "universal-pathlib>=0.2.6", # Unified path interface for local/cloud storage
    "python-dotenv>=1.1.1",     # Environment variable management
    "beartype>=0.21.0",         # Runtime type validation
    "devtools>=0.12.2",         # Debug printing and development utilities
    "pip>=25.1.1",              # Python package installer and manager

    # ============================================
    # Web Framework & API
    # ============================================
    "fastapi[standard]>=0.115.6", # Modern async web framework with OpenAPI

    # ============================================
    # Deployment Platforms
    # ============================================
    "modal>=1.0.5", # Serverless cloud platform for Python apps

    # ============================================
    # LangChain Extensions
    # ============================================
    "langchain-classic>=1.0.0", # Classic LangChain components

    # ============================================
    # Structured Data Extraction
    # ============================================
    "baml-py>=0.209.0", # BAML Python library for LLM parsing
    "baml-cli>=0.1.0",  # BAML CLI for structured extraction

    # ============================================
    # Database Backends
    # ============================================
    "psycopg2-binary>=2.9.11", # PostgreSQL adapter for Python

    # ============================================
    # Research & Web Search
    # ============================================
    "gpt-researcher>=0.14.0", # Autonomous web research agent (requires cryptography>=45)
]

[project.urls]
Homepage = "https://github.com/tclatos/genai-blueprint"
Repository = "https://github.com/tclatos/genai-blueprint"


[dependency-groups]
# Optional dependency groups for specific use cases
# Install with: uv sync --group <group-name>

# ============================================
# Browser Automation
# ============================================
browser_control = [
    "playwright>=1.51.0",     # Headless browser automation framework
    "helium>=5.1.0,<6",       # High-level web automation wrapper
    "browser-use-sdk>=2.0.4", # Browser automation agent SDK
]

# ============================================
# Extended AI Capabilities
# ============================================
extra = [
    "gpt-researcher>=0.13",     # Autonomous AI research assistant
    "tavily-python>=0.7.12",    # LLM-optimized search engine API
    "langchain-tavily>=0.2.11", # LangChain integration for Tavily
    "ddgs>=9.7.0",              # DuckDuckGo search API wrapper
    "unidecode>=1.3.8",         # ASCII transliteration of Unicode text
    "openpyxl>=3.1.5",          # Excel file reading and writing
    "fuzzysearch>=0.8.0",       # Fuzzy string matching algorithms
]

# ============================================
# Web UI & Visualization
# ============================================
ui = [
    "uvicorn>=0.34.0",          # Lightning-fast ASGI server
    "sse-starlette>=2.1.0",     # Server-sent events for streaming
    "streamlit[pdf]>=1.49",     # Interactive web app framework with PDF support
    "streamlit-monaco>=0.1.3",  # Monaco code editor component for Streamlit
    "st-annotated-text>=4.0.2", # Text annotation component for Streamlit
    "st-cytoscape>=0.0.5",      # Cytoscape graph visualization for Streamlit
    "ipycytoscape>=1.3.3",      # Interactive graph visualization for Jupyter
]

# ============================================
# Demo Applications
# ============================================
demos = [
    "bs4>=0.0.2",           # BeautifulSoup HTML/XML parser
    "lark>=1.1.9,<2",       # Modern parsing toolkit for grammars
    "plotly>=5.22.0",       # Interactive web-based charts and graphs
    "Faker>=25.0.0",        # Generate realistic fake data for testing
    "yfinance>=0.2.38",     # Yahoo Finance market data downloader
    "matplotlib>=3.9.0,<4", # Comprehensive plotting and visualization
    "sqlalchemy>=2.0.29",   # SQL toolkit and ORM
    "pypdf>=5.1.0,<6",      # Pure-Python PDF library
    "scikit-learn>=1.6.1",  # Machine learning algorithms and tools
]

# Optional PII anonymization (requires cryptography<44.1)
presidio = [
    "presidio-analyzer>=2.2.0",   # PII detection and analysis
    "presidio-anonymizer>=2.2.0", # PII anonymization and redaction (requires cryptography<44.1)
]

# ============================================
# Development Tools
# ============================================
dev = [
    "ruff>=0.9.1",       # Fast Python linter and formatter
    "pytest>=8.1.1",     # Modern testing framework
    "ipykernel>=6.29.4", # Jupyter kernel for notebooks
    "ipywidgets>=8.1.2", # Interactive widgets for Jupyter
    "grandalf>=0.8",     # Graph and tree layout algorithms
]

[tool.uv]
package = true
default-groups = ["ui", "demos", "extra", "dev"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["genai_bp"]
package-dir = { "genai_bp" = "genai_blueprint" }

[tool.ruff]
builtins = ["ic", "debug"]
line-length = 120          # default is 88

[tool.ruff.lint]
# Lint rule configuration:
select = [
    "E", # Pycodestyle errors (PEP 8 style violations)
    "F", # Pyflakes errors (basic syntax and logic errors)
    "I", # isort rules (import sorting)
    "W", # Pycodestyle warnings (style issues that aren't errors)
    "B", # Bugbear - catches common bugs and anti-patterns                                                                                      
    # "N", # Naming conventions                                                                                                                                  
    "C",     # Better comprehensions    
    "ASYNC", # Async 
    "ANN",   # Annotations
    "PIE",
    "PD",    # Pandas
    "FURB",  #refurbishing and modernizing
]

ignore = [ # Ignored linter rules: 
    "E501",   #Line too long (we use 120 chars instead of default 88) 
    "W291",   # Trailing whitespace 
    "W293",   # white spaces "
    "B006",   # Do not use mutable data structures for argument defaults
    "C901",   # Function is too complex , 
    "ANN401", # Annotated with Any
    "ANN002", # Annotate *args
    "ANN003", # Annotate **kwarg
    "ANN201", # Missing return type
    "ANN202", # Missing return info
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportTypedDictNotRequiredAccess = false # Avoid warnings in LangGraph

[tool.pytest.ini_options]
testpaths = ["unit_tests", "integration_tests"]
python_files = ["test_*.py", "*_test.py"]


[project.scripts]
cli = "genai_tk.main.cli:main"
